BJS2-67307 Правки по результатам ревью